--- a/StackQueue_G_211_22_0002.ipynb
+++ b/StackQueue_G_211_22_0002.ipynb
@@ -77,7 +77,8 @@
         "\n",
         "#Driver code\n",
         "N = 3\n",
-        "# A, C, B are the name of rods TowerOfHanoi (N, 'A', 'C', 'B')"
+        "# A, C, B are the name of rods 
+      TowerOfHanoi (N, 'A', 'C', 'B')"
       ],
       "metadata": {
         "id": "w263NT7mPPm3"
