--- a/StackQueue_G_211_22_0002.ipynb
+++ b/StackQueue_G_211_22_0002.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPa0VcQP9mMQ1NVi/ISi3La",
+      "authorship_tag": "ABX9TyOds2/LxVfGvznCVLlSEsWh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,13 +77,13 @@
         "\n",
         "#Driver code\n",
         "N = 3\n",
-        "# A, C, B are the name of rods 
-      TowerOfHanoi (N, 'A', 'C', 'B')"
+        "# A, C, B are the name of rods\n",
+        "TowerOfHanoi (N, 'A', 'C', 'B')"
       ],
       "metadata": {
         "id": "w263NT7mPPm3"
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": []
     },
     {
